--- a/index.html
+++ b/index.html
@@ -367,10 +367,10 @@
         
         자세한 설정 방법은 MUSIC_SETUP.md 파일을 참고하세요.
     -->
-    <div class="music-player" id="musicPlayer" style="display: none;">
-        <audio id="backgroundMusic" loop preload="none">
-            <!-- Google Drive 외부 스토리지 링크 -->
-            <source src="https://drive.google.com/uc?export=download&id=1MjsCkmY4Svy-Nzk4Hwtcn-hNXI8RNIRj" type="audio/mpeg" id="musicSource">
+    <div class="music-player" id="musicPlayer">
+        <audio id="backgroundMusic" loop preload="auto">
+            <!-- 로컬 음악 파일 -->
+            <source src="music.mp3" type="audio/mpeg" id="musicSource">
             <source src="music.ogg" type="audio/ogg">
             음악 파일을 지원하지 않는 브라우저입니다.
         </audio>
