--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@
         자세한 설정 방법은 MUSIC_SETUP.md 파일을 참고하세요.
     -->
     <div class="music-player" id="musicPlayer">
-        <audio id="backgroundMusic" loop preload="auto">
-            <!-- 로컬 음악 파일 -->
-            <source src="music.mp3" type="audio/mpeg" id="musicSource">
-            <source src="music.ogg" type="audio/ogg">
+        <audio id="backgroundMusic" loop preload="auto" autoplay>
+            <!-- GitHub Pages 음악 파일 -->
+            <source src="https://elliehan93.github.io/JBJH-wedding-invitation/music.mp3" type="audio/mpeg" id="musicSource">
+            <source src="https://elliehan93.github.io/JBJH-wedding-invitation/music.ogg" type="audio/ogg">
             음악 파일을 지원하지 않는 브라우저입니다.
         </audio>
         <button class="music-toggle" id="musicToggle" aria-label="음악 재생/일시정지">
