신부 이모티콘 변경 (👰 → 👰‍♀️)

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">👰</div>
+                        <div class="contact-icon">👰‍♀️</div>
                         <div class="contact-content">
                             <h3>신부</h3>
                             <p class="contact-name">한정화</p>
