--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" as="image" href="photos/hero.jpg" id="preloadHero">
-    <!-- 카카오맵 스크립트는 지도 사용하지 않으므로 제거 -->
-    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_KAKAO_APP_KEY&libraries=services"></script> -->
+    <!-- 카카오톡 JavaScript SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 </head>
 <body>
     <!-- 메인 히어로 섹션 -->
