공유하기 버튼 텍스트 변경 및 공유 메시지 개선

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
             </div>
             <h2 class="section-title">청첩장 공유하기</h2>
             <div class="share-buttons">
-                <button class="share-btn" onclick="shareKakao()" title="카카오톡 공유">
+                <button class="share-btn" onclick="shareKakao()" title="공유하기">
                     <span>💬</span>
-                    <span class="share-label">카카오톡</span>
+                    <span class="share-label">공유하기</span>
                 </button>
                 <button class="share-btn" onclick="copyLink()" title="링크 복사">
                     <span>🔗</span>
