카카오맵 버튼 표시 문제 수정

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <a href="https://map.naver.com/v5/directions/-/14118322.736132536,4518490.688047096,%EB%B3%B4%ED%83%80%EB%8B%89%ED%8C%8C%ED%81%AC%EC%9B%A8%EB%94%A9,94306527,PLACE_POI/-/transit?c=14118322.7361325,4518490.6880471,15,0,0,0,dh" target="_blank" class="map-link">
                                 <span class="map-icon">🗺️</span> 네이버 지도로 길찾기
                             </a>
-                            <a href="https://map.kakao.com/link/map/보타닉파크웨딩,37.5665,126.8260" target="_blank" class="map-link">
+                            <a href="https://map.kakao.com/link/map/보타닉파크웨딩,37.5665,126.8260" target="_blank" class="map-link kakao-map-link">
                                 <span class="map-icon">📍</span> 카카오맵으로 길찾기
                             </a>
                         </div>
