앨범 스와이프 기능 추가 및 떨어지는 하트 효과 추가 (빨강/흰색)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 </head>
 <body>
+    <!-- 떨어지는 하트 효과 -->
+    <div id="fallingHearts"></div>
+    
     <!-- 메인 히어로 섹션 -->
     <section class="hero">
         <div class="hero-image">
