--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     
     <!-- Fonts -->
-    <!-- 나눔명조 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-    <!-- Great Vibes -->
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <!-- 나눔명조는 로컬 파일 사용 -->
     <link rel="stylesheet" href="style.css">
     
     <!-- Preload critical resources -->
