하트 효과 시작부터 작동하도록 변경, We are getting married 텍스트 최상단 고정, 이모티콘 변경 (인사말: 💍, 결혼식 안내: 👩‍❤️‍👨)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <!-- 떨어지는 하트 효과 -->
     <div id="fallingHearts"></div>
     
+    <!-- "We are getting married" 텍스트 (최상단) -->
+    <div class="wedding-text" id="weddingText"></div>
+    
     <!-- 메인 히어로 섹션 -->
     <section class="hero">
         <div class="hero-image">
@@ -49,7 +52,6 @@
             <div class="image-loader" id="heroLoader"></div>
         </div>
         <div class="hero-content">
-            <div class="wedding-text" id="weddingText"></div>
             <div class="names">
                 <h1 class="groom-name">양진보</h1>
                 <div class="heart">💕</div>
@@ -67,7 +69,7 @@
     <section class="greeting">
         <div class="container">
             <div class="section-divider">
-                <span class="divider-icon">🌸</span>
+                <span class="divider-icon">💍</span>
             </div>
             <div class="greeting-text">
                 <blockquote class="quote">
@@ -153,7 +155,7 @@
     <section class="wedding-info">
         <div class="container">
             <div class="section-divider">
-                <span class="divider-icon">💒</span>
+                <span class="divider-icon">👩‍❤️‍👨</span>
             </div>
             <h2 class="section-title">결혼식 안내</h2>
             <div class="info-card">
