폰트 파일 추가 및 하트 효과 개선: 그림자 제거 및 크기 축소

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     
     <!-- Fonts -->
     <!-- 나눔명조는 로컬 파일 사용 -->
+    <link rel="preload" href="font/great-vibes/nanum-myeongjo/NanumMyeongjo.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="font/great-vibes/nanum-myeongjo/NanumMyeongjoBold.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="font/great-vibes/nanum-myeongjo/NanumMyeongjoExtraBold.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="font/great-vibes/GreatVibes-Regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="style.css">
     
     <!-- Preload critical resources -->
