카카오톡 링크를 ID 기반 딥링크로 변경 및 신부 카카오톡 ID 적용

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                             <h3>신랑 부모님</h3>
                             <p class="contact-name">양태융 · 조미경</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://chat?phone=01052047528" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
+                                <a href="kakaotalk://chat?id=신랑아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
                                     <span class="kakao-icon">💬</span>
                                 </a>
-                                <a href="kakaotalk://chat?phone=01090328528" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
+                                <a href="kakaotalk://chat?id=신랑어머니카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
                                     <span class="kakao-icon">💬</span>
                                 </a>
                             </div>
@@ -289,7 +289,7 @@
                         <div class="contact-content">
                             <h3>신랑</h3>
                             <p class="contact-name">양진보</p>
-                            <a href="kakaotalk://chat?phone=01094778528" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
+                            <a href="kakaotalk://chat?id=신랑카카오톡ID" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
                                 <span class="kakao-icon">💬</span>
                             </a>
                         </div>
@@ -303,10 +303,10 @@
                             <h3>신부 부모님</h3>
                             <p class="contact-name">한상문 · 이유영</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://chat?phone=01038250179" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
+                                <a href="kakaotalk://chat?id=신부아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
                                     <span class="kakao-icon">💬</span>
                                 </a>
-                                <a href="kakaotalk://chat?phone=01090716272" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
+                                <a href="kakaotalk://chat?id=신부어머니카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
                                     <span class="kakao-icon">💬</span>
                                 </a>
                             </div>
@@ -317,7 +317,7 @@
                         <div class="contact-content">
                             <h3>신부</h3>
                             <p class="contact-name">한정화</p>
-                            <a href="kakaotalk://chat?phone=01040086272" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
+                            <a href="kakaotalk://chat?id=hjhyoyo@naver.com" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
                                 <span class="kakao-icon">💬</span>
                             </a>
                         </div>
