카카오톡 링크를 프로필 보기 방식으로 변경 및 신부 어머니 카카오톡 ID 적용

--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
                             <h3>신랑 부모님</h3>
                             <p class="contact-name">양태융 · 조미경</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://chat?id=신랑아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
+                                <a href="kakaotalk://profile?id=신랑아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
                                     <span class="kakao-icon">💬</span>
                                 </a>
-                                <a href="kakaotalk://chat?id=신랑어머니카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
+                                <a href="kakaotalk://profile?id=신랑어머니카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
                                     <span class="kakao-icon">💬</span>
                                 </a>
                             </div>
@@ -290,7 +290,7 @@
                         <div class="contact-content">
                             <h3>신랑</h3>
                             <p class="contact-name">양진보</p>
-                            <a href="kakaotalk://chat?id=신랑카카오톡ID" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
+                            <a href="kakaotalk://profile?id=신랑카카오톡ID" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
                                 <span class="kakao-icon">💬</span>
                             </a>
                         </div>
@@ -304,10 +304,10 @@
                             <h3>신부 부모님</h3>
                             <p class="contact-name">한상문 · 이유영</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://chat?id=신부아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
+                                <a href="kakaotalk://profile?id=신부아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
                                     <span class="kakao-icon">💬</span>
                                 </a>
-                                <a href="kakaotalk://chat?id=ajsl0716@naver.com" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
+                                <a href="kakaotalk://profile?id=ajsl0716" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
                                     <span class="kakao-icon">💬</span>
                                 </a>
                             </div>
@@ -318,7 +318,7 @@
                         <div class="contact-content">
                             <h3>신부</h3>
                             <p class="contact-name">한정화</p>
-                            <a href="kakaotalk://chat?id=hjhyoyo@naver.com" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
+                            <a href="kakaotalk://profile?id=hjhyoyo" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
                                 <span class="kakao-icon">💬</span>
                             </a>
                         </div>
