카카오톡 링크를 전화번호 복사 방식으로 변경 및 복사 알림 기능 추가

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                             <h3>신랑 부모님</h3>
                             <p class="contact-name">양태융 · 조미경</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://profile?id=신랑아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
-                                    <span class="kakao-icon">💬</span>
+                                <a href="tel:01052047528" class="kakao-link small" onclick="copyPhoneNumber('010-5204-7528', event);" title="아버지 전화번호 복사">
+                                    <span class="kakao-icon">📞</span>
                                 </a>
-                                <a href="kakaotalk://profile?id=신랑어머니카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
-                                    <span class="kakao-icon">💬</span>
+                                <a href="tel:01090328528" class="kakao-link small" onclick="copyPhoneNumber('010-9032-8528', event);" title="어머니 전화번호 복사">
+                                    <span class="kakao-icon">📞</span>
                                 </a>
                             </div>
                         </div>
@@ -290,8 +290,8 @@
                         <div class="contact-content">
                             <h3>신랑</h3>
                             <p class="contact-name">양진보</p>
-                            <a href="kakaotalk://profile?id=신랑카카오톡ID" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
-                                <span class="kakao-icon">💬</span>
+                            <a href="tel:01094778528" class="kakao-link" onclick="copyPhoneNumber('010-9477-8528', event);" title="전화번호 복사">
+                                <span class="kakao-icon">📞</span>
                             </a>
                         </div>
                     </div>
@@ -304,11 +304,11 @@
                             <h3>신부 부모님</h3>
                             <p class="contact-name">한상문 · 이유영</p>
                             <div class="parent-links">
-                                <a href="kakaotalk://profile?id=신부아버지카카오톡ID" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="아버지">
-                                    <span class="kakao-icon">💬</span>
+                                <a href="tel:01038250179" class="kakao-link small" onclick="copyPhoneNumber('010-3825-0179', event);" title="아버지 전화번호 복사">
+                                    <span class="kakao-icon">📞</span>
                                 </a>
-                                <a href="kakaotalk://profile?id=ajsl0716" class="kakao-link small" onclick="openKakaoTalk(this.href); return false;" title="어머니">
-                                    <span class="kakao-icon">💬</span>
+                                <a href="tel:01090716272" class="kakao-link small" onclick="copyPhoneNumber('010-9071-6272', event);" title="어머니 전화번호 복사">
+                                    <span class="kakao-icon">📞</span>
                                 </a>
                             </div>
                         </div>
@@ -318,8 +318,8 @@
                         <div class="contact-content">
                             <h3>신부</h3>
                             <p class="contact-name">한정화</p>
-                            <a href="kakaotalk://profile?id=hjhyoyo" class="kakao-link" onclick="openKakaoTalk(this.href); return false;" title="축하메세지 보내기">
-                                <span class="kakao-icon">💬</span>
+                            <a href="tel:01040086272" class="kakao-link" onclick="copyPhoneNumber('010-4008-6272', event);" title="전화번호 복사">
+                                <span class="kakao-icon">📞</span>
                             </a>
                         </div>
                     </div>
