신부 부모님 계좌번호 복사 버튼 추가

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
                                 <a href="tel:01090328528" class="kakao-link small" onclick="copyPhoneNumber('010-9032-8528', event);" title="어머니 전화번호 복사">
                                     <span class="kakao-icon">📞</span>
                                 </a>
+                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님', '계좌번호를 입력해주세요', event);" title="계좌번호 복사">
+                                    <span class="kakao-icon">💳</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -309,6 +312,12 @@
                                 </a>
                                 <a href="tel:01090716272" class="kakao-link small" onclick="copyPhoneNumber('010-9071-6272', event);" title="어머니 전화번호 복사">
                                     <span class="kakao-icon">📞</span>
+                                </a>
+                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="아버지 계좌번호 복사">
+                                    <span class="kakao-icon">💳</span>
+                                </a>
+                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="어머니 계좌번호 복사">
+                                    <span class="kakao-icon">💳</span>
                                 </a>
                             </div>
                         </div>
