부모님 연락처 레이아웃 변경: 각 이름별로 전화번호 및 계좌번호 버튼 배치

--- a/index.html
+++ b/index.html
@@ -274,17 +274,29 @@
                         <div class="contact-icon">👫</div>
                         <div class="contact-content">
                             <h3>신랑 부모님</h3>
-                            <p class="contact-name">양태융 · 조미경</p>
-                            <div class="parent-links">
-                                <a href="tel:01052047528" class="kakao-link small" onclick="copyPhoneNumber('010-5204-7528', event);" title="아버지 전화번호 복사">
-                                    <span class="kakao-icon">📞</span>
-                                </a>
-                                <a href="tel:01090328528" class="kakao-link small" onclick="copyPhoneNumber('010-9032-8528', event);" title="어머니 전화번호 복사">
-                                    <span class="kakao-icon">📞</span>
-                                </a>
-                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님', '계좌번호를 입력해주세요', event);" title="계좌번호 복사">
-                                    <span class="kakao-icon">💳</span>
-                                </a>
+                            <div class="parent-names">
+                                <div class="contact-name-row">
+                                    <p class="contact-name">양태융</p>
+                                    <div class="parent-links">
+                                        <a href="tel:01052047528" class="kakao-link small" onclick="copyPhoneNumber('010-5204-7528', event);" title="아버지 전화번호 복사">
+                                            <span class="kakao-icon">📞</span>
+                                        </a>
+                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님 (아버지)', '계좌번호를 입력해주세요', event);" title="아버지 계좌번호 복사">
+                                            <span class="kakao-icon">💳</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="contact-name-row">
+                                    <p class="contact-name">조미경</p>
+                                    <div class="parent-links">
+                                        <a href="tel:01090328528" class="kakao-link small" onclick="copyPhoneNumber('010-9032-8528', event);" title="어머니 전화번호 복사">
+                                            <span class="kakao-icon">📞</span>
+                                        </a>
+                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신랑 부모님 (어머니)', '계좌번호를 입력해주세요', event);" title="어머니 계좌번호 복사">
+                                            <span class="kakao-icon">💳</span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -305,20 +317,29 @@
                         <div class="contact-icon">👫</div>
                         <div class="contact-content">
                             <h3>신부 부모님</h3>
-                            <p class="contact-name">한상문 · 이유영</p>
-                            <div class="parent-links">
-                                <a href="tel:01038250179" class="kakao-link small" onclick="copyPhoneNumber('010-3825-0179', event);" title="아버지 전화번호 복사">
-                                    <span class="kakao-icon">📞</span>
-                                </a>
-                                <a href="tel:01090716272" class="kakao-link small" onclick="copyPhoneNumber('010-9071-6272', event);" title="어머니 전화번호 복사">
-                                    <span class="kakao-icon">📞</span>
-                                </a>
-                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="아버지 계좌번호 복사">
-                                    <span class="kakao-icon">💳</span>
-                                </a>
-                                <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="어머니 계좌번호 복사">
-                                    <span class="kakao-icon">💳</span>
-                                </a>
+                            <div class="parent-names">
+                                <div class="contact-name-row">
+                                    <p class="contact-name">한상문</p>
+                                    <div class="parent-links">
+                                        <a href="tel:01038250179" class="kakao-link small" onclick="copyPhoneNumber('010-3825-0179', event);" title="아버지 전화번호 복사">
+                                            <span class="kakao-icon">📞</span>
+                                        </a>
+                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (아버지)', '우리은행 318-005252-12-101', event);" title="아버지 계좌번호 복사">
+                                            <span class="kakao-icon">💳</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="contact-name-row">
+                                    <p class="contact-name">이유영</p>
+                                    <div class="parent-links">
+                                        <a href="tel:01090716272" class="kakao-link small" onclick="copyPhoneNumber('010-9071-6272', event);" title="어머니 전화번호 복사">
+                                            <span class="kakao-icon">📞</span>
+                                        </a>
+                                        <a href="#" class="kakao-link small" onclick="copyAccountNumber('신부 부모님 (어머니)', '우리은행 1002-040-675106', event);" title="어머니 계좌번호 복사">
+                                            <span class="kakao-icon">💳</span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
