각 섹션 배경색에 맞춰 버튼 배경색 조정

--- a/index.html
+++ b/index.html
@@ -83,13 +83,9 @@
                 </p>
                 <p class="greeting-main">
                     저희 두 사람, 이제 그 건축물을 함께 지어가려 합니다.<br><br>
-                    작은 벽돌 하나에도 서로의 마음을 담고<br>
-                    웃음과 눈물, 햇살과 비바람 모두를 함께 나누며<br>
-                    저희만의 집을 천천히 완성해 가려 합니다.<br><br>
-                    저희의 새로운 시작에 소중한 분들이 함께해 주신다면<br>
-                    그보다 큰 힘과 기쁨은 없을 것 같습니다.<br><br>
-                    바쁘신 가운데 귀한 발걸음 해주셔서<br>
-                    저희의 앞날을 따뜻하게 축복해 주시길 부탁드립니다.
+                    작은 벽돌 하나에도 서로의 마음을 담고 웃음과 눈물, 햇살과 비바람 모두를 함께 나누며 저희만의 집을 천천히 완성해 가려 합니다.<br><br>
+                    저희의 새로운 시작에 소중한 분들이 함께해 주신다면 그보다 큰 힘과 기쁨은 없을 것 같습니다.<br><br>
+                    바쁘신 가운데 귀한 발걸음 해주셔서 저희의 앞날을 따뜻하게 축복해 주시길 부탁드립니다.
                 </p>
             </div>
             <div class="parents">
