--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <link rel="preload" as="image" href="photos/1.jpg">
     <!-- 카카오톡 JavaScript SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EH7QBJM9PC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-EH7QBJM9PC');
+    </script>
 </head>
 <body>
     <!-- 메인 히어로 섹션 -->
